--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>Araan Branco</title>
 </head>
 <body style="background: black">
-	<h1 style="color: white; width: 100%; text-align: center">Bem vindo ao meu site!!</h1>
 	<h1 style="color: white; width: 100%; text-align: center">Site em construção</h1>
-	<img src="./img.jpg" alt="Oloko Bixo!">
+	<audio src="http://cn2.mp3li.org/cr/XiA7zP7JahcD02RTemD850kTqdBuZXw65lRT9bF6U-okA98_9IDX_vSRhM_m_YSD3XW2909_3hOlk9c3ZilID9mq_XOmTrToTBluN7mzscFK4eK_YsGkZDpjust44L0Ko9GHOkF__Y-WsWdYz2vfZZxwS_3nTOOYm2WJlJWB8z5lScinBmrbu2qPThPFc8LG5z0BIStdYVQXGBSTjGIKJTdN8xQdiTIcDvOnPUTBemlfdJlTQPnqNFLbwhwy4U3vniGpu9tN1wTdB3So73ulQofd2s76coDn5qe7UjnpbLvUdEVy-ZkqKCj9c0_s90p1VWwYwP1WWRLYu7PLRY6sYooEyFgDgX-II6q1zGd7mrOXtNuFiIpRqLuSw0wz0QDL3KnqT2d9aiYqB9zz9e__Z7Ido_DDOiaogVlCpDb9V2TU3ADPO_O7AHNSbQBM-P6Z0QmIA7z3uqJLV5vjJkFwX3ZiJQqurWHGQQ-rTLg.mp3" autoplay loop>
+		<p>Seu navegador não suporta o elemento audio </p>
+	</audio>
+	<center><img src="./img.jpg" alt="Oloko Bixo!"></center>
 </body>
 </html>
