--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background: black">
 	<h1 style="color: white; width: 100%; text-align: center">Site em construção</h1>
-	<audio src="http://cdl1.convert2mp3.net/swf_player.php?id=eNCCJ9PgwPLT_youtube_8s6xmolPuUo" autoplay loop>
+	<audio src="https://www.myinstants.com/media/sounds/careless_whispers.mp3" autoplay loop>
 		<p>Seu navegador não suporta o elemento audio </p>
 	</audio>
 	<center><img src="./img.jpg" alt="Oloko Bixo!"></center>
