--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		curKisser = 0 //the last image DIV to be displayed (used for timer)
 		kissDelay = 1000 //duration images stay on screen (in milliseconds)
 		kissSpacer = 50 //distance to move mouse b4 next heart appears
-		theimage = "http://www.dynamicdrive.com/dynamicindex13/lips_small.gif" //the 1st image to be displayed
-		theimage2 = "http://www.dynamicdrive.com/dynamicindex13/small_heart.gif" //the 2nd image to be displayed
+		theimage = "lips_small.gif" //the 1st image to be displayed
+		theimage2 = "small_heart.gif" //the 2nd image to be displayed
 		var docLayers = (document.layers) ? true:false;
 		var docId = (document.getElementById) ? true:false;
 		var docAll = (document.all) ? true:false;
